--- a/ui/html/user/login.html
+++ b/ui/html/user/login.html
@@ -5,6 +5,8 @@
     <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
 
     <form action="/user/login" method="POST" class="space-y-6" novalidate>
+      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
       <!-- Username Field -->
       <div>
         <label for="username" class="block text-gray-600 font-semibold">Username</label>
