--- a/ui/html/user/new.html
+++ b/ui/html/user/new.html
@@ -4,8 +4,10 @@
   <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-6">
     <h2 class="text-2xl font-semibold text-gray-800 text-center mb-6">Create New User</h2>
 
-    {{with .Form}}
     <form action="/user/new" method="POST">
+      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+      {{with .Form}}
       <!-- Global Form Error Message -->
       {{with .Errors}}
       <div id="globalError" class="bg-red-100 text-red-700 border border-red-500 p-3 rounded-md mb-4 text-sm">
@@ -19,7 +21,8 @@
       <div class="mb-4">
         <label for="Username" class="block text-gray-700 text-sm font-medium mb-2">Username</label>
         <input type="text" id="Username" name="Username" required
-          class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" value="{{.Username}}">
+          class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+          value="{{.Username}}">
         {{with .FieldErrors.Username}}
         {{range .}}
         <p class="text-red-500 text-xs mt-2" id="usernameError">{{.}}</p>
@@ -56,8 +59,8 @@
         class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-md transition">
         Create User
       </button>
+      {{end}}
     </form>
-    {{end}}
   </div>
 </div>
 {{end}}
